Fix - Align ListItem informaion correctly
Align title, status, description and genres in each ListItem
Add example image

--- a/root/frontend/src/components/ListItem/ListItem.css
+++ b/root/frontend/src/components/ListItem/ListItem.css
@@ -1,29 +1,49 @@
 .item-container {
     background: lightgrey;
-    display:flex;
+    display: flex;
     /* margin-left: 5vw; */
     width: 80vw;
-    margin:auto;
+    margin: auto;
     align-items: center;
     justify-content: space-around;
 }
 .item-container:hover {
     background: white;
 }
+.item-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .xcenter {
     display: flex;
+    flex-direction: column;
     align-items: center;
-}
-.xright {
-    display:flex;
-    align-content: space-between;
 }
 .item-description {
     white-space: initial;
     line-height: 1.2em;
-    height: 6em;  
-    max-width:150ch;
+    height: 6em;
+    max-width: 150ch;
     overflow: hidden;
     text-overflow: ellipsis;
     word-wrap: break-word;
+}
+/* .xright {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center ;
+    align-content: space-between;
+} */
+.xright {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+}
+.item-delete {
+    align-self: flex-end;
 }
