--- a/root/frontend/src/components/SearchResultsView/SearchResultsView.css
+++ b/root/frontend/src/components/SearchResultsView/SearchResultsView.css
@@ -31,8 +31,8 @@
     position: absolute;
     padding: 10px;
     min-width: 40px;
-    left:-15px;
-    top:-7px
+    left: -16px;
+    top:-8px
     /* z-index: 1000; */
 }
 .srv-sort {
